[tool.poetry]
name = "test_cp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
marshmallow = "^3.17.0"
aiohttp = "^3.8.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
aresponses = "^2.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
